[metadata]
name = compgraph
version = 1.0.0
author = Zmushko Philip
author_email = zmushko.fa@phystech.edu
description = ComputeGraph (Map/Reduce/Join/Sort)
long_description = file: LIB_README.md
classifiers =
    Programming Language :: Python :: 3
    License :: MIPT License

[options]
packages = find:
install_requires = click

